erDiagram
    %% ===== ユーザー =====
    USERS {
        BIGINT id PK
        VARCHAR name
        VARCHAR email
        VARCHAR password_hash
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    %% ===== 収入系 =====
    FIXED_INCOMES {
        BIGINT id PK
        BIGINT user_id FK
        VARCHAR name
        NUMERIC amount
        DATE payment_date
        TEXT memo
        TIMESTAMP created_at
    }

    SIDE_INCOMES {
        BIGINT id PK
        BIGINT user_id FK
        VARCHAR source
        NUMERIC amount
        DATE payment_date
        TIMESTAMP created_at
    }

    INCOME_ADJUSTMENTS {
        BIGINT id PK
        BIGINT user_id FK
        ENUM category
        NUMERIC amount
        VARCHAR reason
        DATE adjustments_date
        TIMESTAMP created_at
    }

    %% ===== 支出系 =====
    FIXED_COSTS {
        BIGINT id PK
        BIGINT user_id FK
        VARCHAR name
        NUMERIC amount
        DATE payment_date
        TEXT memo
        TIMESTAMP created_at
    }
    %% ===== 目標系 =====
    WANTS {
        BIGINT id PK
        BIGINT user_id FK
        VARCHAR name
        NUMERIC target_amount
        DATE target_date
        DATE purchased_at
        BOOLEAN purchased
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    %% ===== 貯金 =====
    SAVINGS {
        BIGINT id PK
        BIGINT user_id FK
        NUMERIC amount
        VARCHAR comment
        DATE saved_at
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    %% ===== 関係 =====
    USERS ||--o{ FIXED_INCOMES : "固定収入"
    USERS ||--o{ SIDE_INCOMES : "副業収入"
    USERS ||--o{ INCOME_ADJUSTMENTS : "本業調整額"
    USERS ||--o{ FIXED_COSTS : "固定費"
    USERS ||--o{ WANTS : "目標貯金・欲しいもの"
    USERS ||--o{ SAVINGS : "貯金履歴"

    %% ===== 履歴テーブルの補足 =====
    %% HISTORY_FIXED_INCOME, HISTORY_SIDE_INCOME, HISTORY_INCOME_ADJUSTMENTS, HISTORY_VARIABLE_COSTS
    %% は現行テーブルと同構造で
